# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
alembic/: README.md
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  profile.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  base.py  models.py  session.py
app/ml/: model_loader.py  predictor.py
app/schemas/: __init__.py  auth.py  profile.py  user.py
app/services/: auth_service.py  user_service.py
